<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="overview_of_the_movie">OverView Of The Movie</string>
    <string name="movie_release_date">Movie Release Date</string>
    <string name="ratings">Rating</string>
    <string name="settings">Settings</string>
    <string name="pref_sort_key">sort</string>
    <string name="pref_list_label">Search Movies By</string>
    <string name="pref_label_popular">Popular Movie</string>
    <string name="pref_label_top_rated">Top Rated Movie</string>
    <string name="pref_label_favourite"> Favourite Movie</string>
    <string name="pref_popular_value">/movie/popular</string>
    <string name="pref_top_rated_value">/movie/top_rated</string>
    <string name="pref_favourite_value" >/movie/</string>
    <string name="noInternet">NO INTERNET CONNECTION</string>
    <string name="POSITION_KEY">position</string>
    <string name="LIST_KEY">list</string>
    <string name="play_video">Play Video</string>
    <string name="trailer">Trailer</string>
    <string name="review">Review</string>
    <string name="unmark_favourite">Movie Removed From Favourite List</string>
    <string name="mark_favourite">Movie Added To Favourite List</string>
    <string name="tools_text_rating">6.8</string>
    <string name="tools_text_date">2017-03-16</string>
    <string name="tools_text_overview">A live action adoptation of....</string>
    <string name="no_of_column">3</string>
    <string name="no_review_available">No Review Available</string>
    <string name="no_trailer_available">No Trailer Available</string>
    <string name="no_fav_movie">No Favourite Movies</string>
</resources>

