<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/six">

            <ImageView
                android:id="@+id/movie_thumbnail"
                android:layout_width="@dimen/two_thirty"
                android:layout_height="@dimen/two_eighty"
                android:layout_gravity="center"
                android:contentDescription="@string/movie_poster"
                tools:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/five"
                android:paddingRight="@dimen/five"
                android:paddingTop="@dimen/three"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_title"
                tools:text="Beauty and the Best" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/five"
                android:paddingRight="@dimen/five"
                android:paddingTop="@dimen/five">

                <TextView
                    android:id="@+id/head_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/five"
                    android:text="@string/overview_of_the_movie"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_head" />

                <TextView
                    android:id="@+id/overView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/four"
                    android:paddingTop="@dimen/three"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_content"
                    tools:text="@string/tools_text_overview" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/five"
                    android:paddingTop="@dimen/four">

                    <TextView
                        android:id="@+id/head_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_release_date"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_head" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_content"
                        tools:text="@string/tools_text_date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/five"
                    android:paddingTop="@dimen/four">

                    <TextView
                        android:id="@+id/head_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ratings"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_head" />


                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_content"
                        tools:text="@string/tools_text_rating" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/head_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_head" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/progress_bar" />

                <TextView
                    android:id="@+id/no_trailer"
                    android:visibility="gone"
                    android:textColor="@color/text_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible" />


            </RelativeLayout>

            <TextView
                android:id="@+id/head_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_head" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/loading_indicator2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/no_reviewer"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_head" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/sixteen"
        android:layout_marginRight="@dimen/sixteen"
        app:borderWidth="@dimen/zero"
        app:elevation="@dimen/six"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp" />

</FrameLayout>





